Fixed arrow on map marker name when text is wrapped

--- a/css/main.css
+++ b/css/main.css
@@ -200,10 +200,10 @@ h2 {
 	height: 0px;
 	border-style: solid;
 	border-width: 5px 0 5px 8.7px;
-	border-color: transparent transparent transparent #3e3e3e;
+	border-color: transparent transparent transparent #808080;
 	content: "";
 	position: absolute;
-	top: 4px;
+	bottom: 4px;
 	right: -15px;
 }
 
